--- a/config.org
+++ b/config.org
@@ -2477,7 +2477,7 @@ The ~@~ character indicates note with timestamp and ~!~ is just timestamp
 
   (setq org-todo-keywords
         '((sequence
-           "TODO(t/!)"       ; A task that needs doing & is ready to do
+           "TODO(t!)"       ; A task that needs doing & is ready to do
            "PROJ(p)"       ; A project, which usually contains other tasks
            "LOOP(r)"       ; A recurring task
            "STRT(s)"       ; A task that is in progress
