--- a/config.org
+++ b/config.org
@@ -276,7 +276,7 @@ Some are doom specific whilst others are nice quality of life improvements
 ;;deft                 ; notational velocity for Emacs
 doom                   ; what makes DOOM look the way it does
 doom-dashboard         ; a nifty splash screen for Emacs
-doom-quit              ; DOOM quit-message prompts when you quit Emacs
+;;doom-quit              ; DOOM quit-message prompts when you quit Emacs
 (emoji +unicode)       ; 🙂
 hl-todo                ; highlight TODO/FIXME/NOTE/DEPRECATED/HACK/
 ;;hydra                ; quick documentation for related commands
