--- a/config.org
+++ b/config.org
@@ -2633,6 +2633,33 @@ just set where I want things to be
                 :immediate-finish t
                 :unnarrowed t  )
                 ))
+
+(defun org-roam-node-insert-immediate (arg &rest args)
+  (interactive "P")
+  (let ((args (cons arg args))
+        (org-roam-capture-templates (list (append (car org-roam-capture-templates) ;; don't show the capture buffer for different templates
+                                                  '(:immediate-finish t)))))
+    (apply #'org-roam-node-insert args)))
+
+
+(defun da/org-roam-filter-by-tag (tag-name)
+  (lambda (node)
+    (member tag-name (org-roam-node-tags node))))
+
+(defun da/org-roam-list-notes-by-tag (tag-name)
+  (mapcar #'org-roam-node-file
+          (seq-filter
+           (da/org-roam-filter-by-tag tag-name)
+           (org-roam-node-list))))
+
+;; TODO change "article to a tag that happens when node is not populated so it always goes into agenda"
+(defun da/org-roam-refresh-agenda-list ()
+  (interactive)
+  (setq org-agenda-files (da/org-roam-list-notes-by-tag "article")))
+
+;; Build the agenda list the first time for the session
+;; (my/org-roam-refresh-agenda-list)
+
 ;; old templates to consider for future use
 ;; (setq org-roam-capture-templates
 ;;       '(("m" "main" plain
@@ -2651,6 +2678,22 @@ just set where I want things to be
 ;;          (file+head "articles/${title}.org" "#+title: ${title}\n#+filetags: :article:\n")
 ;;          :immediate-finish t
 ;;          :unnarrowed t)))
+(use-package! websocket
+    :after org-roam)
+
+(use-package! org-roam-ui
+    :after org ;; or :after org
+;;         normally we'd recommend hooking orui after org-roam, but since org-roam does not have
+;;         a hookable mode anymore, you're advised to pick something yourself
+;;         if you don't care about startup time, use
+;;  :hook (after-init . org-roam-ui-mode)
+    :config
+    (setq org-roam-ui-sync-theme t
+          org-roam-ui-follow t
+          org-roam-ui-update-on-save t
+          org-roam-ui-open-on-start t))
+
+
 #+end_src
 *** Jupyter notebook
 #+begin_src emacs-lisp
@@ -2673,32 +2716,12 @@ just set where I want things to be
   (setq org-contacts-files '("~/Org/contacts.org")))
 #+end_src
 
-*** org roam
-#+begin_src emacs-lisp
-(use-package! websocket
-    :after org-roam)
-
-(use-package! org-roam-ui
-    :after org ;; or :after org
-;;         normally we'd recommend hooking orui after org-roam, but since org-roam does not have
-;;         a hookable mode anymore, you're advised to pick something yourself
-;;         if you don't care about startup time, use
-;;  :hook (after-init . org-roam-ui-mode)
-    :config
-    (setq org-roam-ui-sync-theme t
-          org-roam-ui-follow t
-          org-roam-ui-update-on-save t
-          org-roam-ui-open-on-start t))
-
-#+end_src
-
 ** Python
-
+TODO: fix this crap
 #+begin_src emacs-lisp
-(after! conda
-  (setq conda-anaconda-home (expand-file-name "/opt/miniconda3/")
-        conda-env-home-directory (expand-file-name "~/.conda"))
-  )
+;; (after! conda
+;;   (setq conda-anaconda-home "~/micromamba")
+  ;; )
 #+end_src
 ** Graphviz
 Graphviz is a nice method of visualising simple graphs, based on plaintext
